FINAL ACTIONS {
    TODO:
        - Mining Drones will not try to contest claimed asteroids.
        - Mining Drones now have a visible shield.
        - Mining Drones will now move to new asteroids once depleted.

        - Asteroids can now be contested.
}
Drone Update - Part II - 31/07/2022
====================================
    SERVER:
        - Drones will move to next asteroid when current target is depleted.
    CLIENT:
        - Asteroids are now properly deleted client-side.
        - Fixed client-side claim objects.


Drone & Asteroid Updates - 29/07/2022
=====================================
    SERVER:
        - Mining Drones can now claim asteroids for the creating player.
        - Resources will now only be collected every second.
        - A friendly mining drone or the player now must be on the asteroid in order to mine.
    CLIENT:
        - Asteroids are visibly depleted upon being mined.

Drones and NPCs - 26/07/2022
==========================
    SERVER:
        - Added Player Drones with basic logic (mining only).
        - Players can now create mining drones.
        - Added basic NPC enemy code.
    CLIENT:
        - Player drones are now visible in game.
        - Enemy drones are now visible in game.

Harvesting and Depleting - 23/07/2022
======================================
    SERVER:
        - Asteroids being claimed are no longer effected by other players.
        - Added player inventory.
        - Asteroids are now harvestable.
    CLIENT:
        - Your asteroids are now shown in blue, and other players' asteroids are green.
        - Asteroid claim circle no longer disappears.

Asteroid Work - 22/07/2022
===========================
    SERVER:
        - Asteroids are now claimable.
    CLIENT:
        - Asteroids can be seen being claimed (WIP).

World Building / Player Connection - 21/07/2022
===============================================
    SERVER:
        - Players can now connect and disconnect safely.